fix: pane layout broken when wrap line is off (#3027)

--- a/packages/hoppscotch-common/assets/scss/styles.scss
+++ b/packages/hoppscotch-common/assets/scss/styles.scss
@@ -481,6 +481,10 @@ pre.ace_editor {
 }
 
 .cm-editor {
+  .cm-content {
+    @apply whitespace-normal;
+  }
+
   .cm-line::selection {
     @apply bg-accentDark #{!important};
     @apply text-accentContrast #{!important};
